[gd_scene load_steps=10 format=3 uid="uid://dxi0leh0hhq1t"]

[ext_resource type="Script" uid="uid://dpyywetywmah3" path="res://scripts/inimigo.gd" id="1_yqwx7"]
[ext_resource type="Texture2D" uid="uid://ds4c3oid84iil" path="res://sprites/penguin.png" id="2_1ho6i"]

[sub_resource type="AtlasTexture" id="AtlasTexture_jhbs1"]
atlas = ExtResource("2_1ho6i")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijmqq"]
atlas = ExtResource("2_1ho6i")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_818de"]
atlas = ExtResource("2_1ho6i")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_sr8pt"]
atlas = ExtResource("2_1ho6i")
region = Rect2(96, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_a0bn0"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_jhbs1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijmqq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_818de")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sr8pt")
}],
"loop": true,
"name": &"pppp",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_vtx04"]
size = Vector2(14, 15)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_yqwx7"]
size = Vector2(14, 15)

[node name="inimigo" type="CharacterBody2D"]
collision_layer = 32
collision_mask = 3
script = ExtResource("1_yqwx7")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(2, -8)
sprite_frames = SubResource("SpriteFrames_a0bn0")
animation = &"pppp"
autoplay = "pppp"
frame_progress = 0.38291425

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_vtx04")
debug_color = Color(0.69580173, 0.28032577, 1, 0.41960785)

[node name="HitBox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(0, 0.5)
shape = SubResource("RectangleShape2D_yqwx7")
debug_color = Color(0.15294118, 0.22352941, 0, 0.41960785)

[node name="DetectorTerreno" type="RayCast2D" parent="."]
position = Vector2(17, 0)
target_position = Vector2(0, 26)
collision_mask = 2

[node name="DetectorParede" type="RayCast2D" parent="."]
target_position = Vector2(22, 0)
collision_mask = 2

[node name="DetectorPlayer" type="RayCast2D" parent="."]
position = Vector2(0, 5)
target_position = Vector2(47, 0)
